Arquivo de configuração e template página inicial

--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -1,5 +1,6 @@
-<?php if(!class_exists('Rain\Tpl')){exit;}?><div class="cadastro">	
+<div class="cadastro">
 	<div class="container">
+		<p><h3>Cadastro</h3></p>
 		<form method="post" action="/cadastro">
 
 		  	<div class="form-group">
@@ -98,7 +99,10 @@
 				</div>
 			</div>
 
-		  <button type="submit" class="btn btn-outline-danger float-right">Cadastrar</button>
+			<div class="">
+			  <button type="submit" class="btn btn-outline-danger float-right">Cadastrar</button>
+			  <button type="reset" class="btn btn-outline-danger mr-2 float-right">Limpar</button>
+			</div>
 
 		</form>
 	</div>
