--- a/views/footer.html
+++ b/views/footer.html
@@ -1,3 +1,22 @@
-
+			
+			<div class="rodape">
+		        <div class="container">
+		            <div class="row">
+		                <div class="col-md-8">
+		                    <div class="">
+		                        <p>Igreja Presbiteriana de Vila Gustavo: <a href="https://www.facebook.com/ipvilagustavo/?__tn__=%2CdkC-R&eid=ARDnJ4L5wHk9Vba1a3sqCQfdscNGsyanAoqDYbpnqheZTdYV_pvGK9qBV_g4loi16RkO5PFcj_3XLlSw&hc_ref=ARQgaSS4hp9OyAdJjGs-Di0z7ljzrIF2rVzfOHp9sSjJ5tj-9WzCWF80UPYX_bvLPSg" target="_blank">facebook.com/ipvilagustavo</a></p>
+		                    </div>
+		                </div>
+		                
+		                <div class="col-md-4">
+		                    <div class="">
+		                        <p>Desenvolvido por Antonio Orlando</p>
+		                    </div>
+		                </div>
+		            </div>
+		        </div>
+		    </div>
+		<script src="res/js/jquery.js"></script>
+		<script src="res/js/bootstrap.min.js"></script>
 	</body>
 </html>
