--- a/views/header.html
+++ b/views/header.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Abrace IPVG - Cadastro</title>
-</head>
-<body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Abrace IPVG</title>
+		<link href="res/css/all.min.css" rel="stylesheet">
+		<link href="res/css/bootstrap.min.css" rel="stylesheet">
+		<link href="res/css/estilo.css" rel="stylesheet">
+	</head>
+		<body>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-danger fixed-top">
+				<div class="container">
+					<a class="navbar-brand" href="/"> Imagem Abrace <!-- <img src="img/abrace.png" width="25px" alt="Abrace IPVG">Logo do Abrace --> </a>
+			    	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+			    		<span class="navbar-toggler-icon"></span>
+			  		</button>
+			  		<div class="collapse navbar-collapse" id="navbarToggle">
+			    		<div class="navbar-nav">
+			      			<a class="nav-item nav-link active" href="#">Cadastro</a>
+			      			<a class="nav-item nav-link" href="/pesquisa">Pesquisa</a>
+			      			<a class="nav-item nav-link" href="/relatorio">Relatório</a>
+			    		</div>
+			  		</div>
+		  		</div>
+			</nav>
