Ajustes no Cadastro - Página com lista de cadastrados e edição

--- a/views/editar.html
+++ b/views/editar.html
@@ -1,72 +1,60 @@
 <div class="cadastro wrapper">
 	<div class="container">
-		<p><h3>Cadastro</h3></p>
+		<p><h3>Atualizar Cadastro</h3></p>
 		{if="$error != ''"}
-    	<div class="alert alert-danger alert-dismissible fade show" role="alert">
-  			<p>{$error}</p>
-  			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    		<span aria-hidden="true">&times;</span>
-  			</button>
-		</div>
+    	<p class="alert alert-danger">
+			{$error}
+		</p>
 		{/if}
-
-		{if="$success != ''"}
-    	<div class="alert alert-success alert-dismissible fade show" role="alert">
-  			<p>{$success}</p>
-  			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    		<span aria-hidden="true">&times;</span>
-  			</button>
-		</div>
-		{/if}
-
 		<div class="clearfix">
 			<div class="float-right">
 				<span class="text-danger">* </span><small>Campo obrigatório</small>
 				<span class="text-danger ml-2">** </span><small>É necessário pelo menos um contato</small>
 			</div>
 		</div>
-		<form method="post" action="/cadastro">
+		<form method="post" action="/pesquisa/:idpaciente">
 
 		  	<div class="form-group">
 		    	<label for="inputAddress">Nome Completo</label><span class="text-danger"> *</span>
-		    	<input type="text" class="form-control" name="nome" id="inputAddress" autofocus="yes">
+		    	<input type="text" class="form-control" value="{function="corrigirNome($paciente.nome)"}" name="nome" id="inputAddress" autofocus="yes">
 		  	</div>
 
 		  	<div class="form-group">
 		    	<label for="inputAddress2">Endereço</label>
-		    	<input type="text" class="form-control" name="endereco" id="inputAddress2">
+		    	<input type="text" class="form-control" value="{function="corrigirNome($paciente.endereco)"}" name="endereco" id="inputAddress2">
 		  	</div>
 
 		  	<div class="form-row">
 		    	<div class="form-group col-md-6">
 		      		<label for="inputCity">Cidade</label>
-		      		<input type="text" class="form-control" name="cidade" id="inputCity">
+		      		<input type="text" class="form-control" value="{function="corrigirNome($paciente.cidade)"}" name="cidade" id="inputCity">
 		    	</div>
 
 		    	<div class="form-group col-md-4">
 		      		<label for="inputBairro">Bairro</label>
-		      		<input type="text" class="form-control" name="bairro" id="inputBairro">
+		      		<input type="text" class="form-control" value="{function="corrigirNome($paciente.bairro)"}" name="bairro" id="inputBairro">
 		    	</div>
 
 		    	<div class="form-group col-md-2">
 		      		<label for="inputZip">Cep</label>
-		      		<input type="text" class="form-control" name="cep" id="inputZip" placeholder="01234-000">
+		      		<input type="text" class="form-control" value="{$paciente.cep}" name="cep" id="inputZip" placeholder="01234-000">
 		    	</div>
 		  	</div>
 
 		  	<div class="form-row">
 		    	<div class="form-group col-md-6">
-		      		<label for="inputEmail4">Email</label>
-		      		<input type="email" class="form-control" id="inputEmail4" name="email">
+		      		<label for="inputEmail">Email</label>
+		      		<input type="email" class="form-control" value="{$paciente.email}" id="inputEmail" name="email">
 		    	</div>
+
 		    	<div class="form-group col-md-3">
 		      		<label for="inputTel">Telefone</label><span class="text-danger"> **</span>
-		      		<input type="text" class="form-control" id="inputTel" name="tel" placeholder="1234-5678">
+		      		<input type="text" class="form-control" value="{$paciente.tel}" id="inputTel" name="tel" placeholder="1234-5678">
 		    	</div>
 
 		    	<div class="form-group col-md-3">
 		      		<label for="inputCel">Celular</label><span class="text-danger"> **</span>
-		      		<input type="text" class="form-control" id="inputCel" name="cel" placeholder="91234-5678">
+		      		<input type="text" class="form-control" value="{$paciente.cel}" id="inputCel" name="cel" placeholder="91234-5678">
 		    	</div>
 		  	</div>
 
@@ -74,25 +62,24 @@
 		  	<div class="border col-md-4 col-xs-12">
 		  		<div class="row my-2">
 			    	<div class="custom-control custom-checkbox ml-4 mr-3">
-						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="clinico" value="1">
+						<input type="checkbox" class="custom-control-input" {if="$check.clinico == 1"} checked {/if} name="opcoes[]" id="clinico" value="1">
 						<label class="custom-control-label" for="clinico">Clínico Geral</label>
 					</div>
 
 					<div class="custom-control custom-checkbox mr-3">
-						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="dentista" value="2">
+						<input type="checkbox" class="custom-control-input" {if="$check.dentista == 2"} checked {/if} name="opcoes[]" id="dentista" value="2">
 						<label class="custom-control-label" for="dentista">Dentista</label>
 					</div>
 
 					<div class="custom-control custom-checkbox">
-						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="psicologo" value="3">
+						<input type="checkbox" class="custom-control-input" {if="$check.psicologo == 3"} checked {/if} name="opcoes[]" id="psicologo" value="3">
 						<label class="custom-control-label" for="psicologo">Psicólogo</label>
 					</div>
 				</div>
 			</div>
 
 			<div class="clearfix">
-				<button type="submit" class="btn btn-outline-danger mt-3 float-right">Cadastrar</button>
-				<button type="reset" class="btn btn-outline-danger mt-3 mr-2 float-right">Limpar</button>
+				<button type="submit" class="btn btn-outline-danger mt-3 float-right">Atualizar</button>
 			</div>
 		</form>
 	</div>
