--- a/views/pesquisa.html
+++ b/views/pesquisa.html
@@ -24,7 +24,7 @@
         				<td>{$value.nome}</td>
 
         				<td>
-        					<a href="/pesquisa/editar/{$value.idpaciente}" class="btn btn-sm btn-secondary text-right"><i class="fa fa-edit"></i> Editar</a>
+        					<a href="/pesquisa/{$value.idpaciente}" class="btn btn-sm btn-secondary text-right"><i class="fa fa-edit"></i> Editar</a>
         				</td>
 
         				<td>
