--- a/views/editar.html
+++ b/views/editar.html
@@ -2,9 +2,12 @@
 	<div class="container">
 		<p><h3>Atualizar Cadastro</h3></p>
 		{if="$error != ''"}
-    	<p class="alert alert-danger">
-			{$error}
-		</p>
+    	<div class="alert alert-danger alert-dismissible fade show" role="alert">
+  			<p>{$error}</p>
+  			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    		<span aria-hidden="true">&times;</span>
+  			</button>
+		</div>
 		{/if}
 		<div class="clearfix">
 			<div class="float-right">
@@ -12,7 +15,7 @@
 				<span class="text-danger ml-2">** </span><small>É necessário pelo menos um contato</small>
 			</div>
 		</div>
-		<form method="post" action="/pesquisa/:idpaciente">
+		<form method="post" action="/pesquisa/{$paciente.idpaciente}">
 
 		  	<div class="form-group">
 		    	<label for="inputAddress">Nome Completo</label><span class="text-danger"> *</span>
