--- a/views/editar.html
+++ b/views/editar.html
@@ -1,4 +1,4 @@
-<div class="cadastro wrapper">
+<div class="wrapper">
 	<div class="container">
 		<p><h3>Atualizar Cadastro</h3></p>
 		{if="$error != ''"}
