--- a/views/detalhes.html
+++ b/views/detalhes.html
@@ -1,3 +1,22 @@
+<body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-danger fixed-top">
+		<div class="container">
+			<a class="navbar-brand" href="/cadastro">
+    			<img src="/res/img/abrace.png" width="40" height="40" class="d-inline-block align-top" alt="Abrace Logo">
+  			</a>
+	    	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+	    		<span class="navbar-toggler-icon"></span>
+	  		</button>
+	  		<div class="collapse navbar-collapse" id="navbarToggle">
+	    		<div class="navbar-nav">
+	      			<a class="nav-item nav-link" href="/cadastro">Cadastro</a>
+	      			<a class="nav-item nav-link active" href="/pesquisa">Pesquisa</a>
+	      			<a class="nav-item nav-link" href="/relatorio">Relatório</a>
+	    		</div>
+	  		</div>
+  		</div>
+	</nav>
+	<div class="espaco"></div>
 <div class="wrapper">
 	<div class="container">
 
@@ -52,17 +71,25 @@
 		</div>
 
 		<div class="row">
-			<label class="col-md-3"><b>Status da(s) Consulta(s)</b></label>
-			<div class="row">
-				<span class="ml-3"><p>Atendido (<i class="fa fa-check"></i>) / Não Atendido (<i class="fa fa-times"></i>)</p></span>
-			</div>
+			<label class="col-md-3"><b>Consulta(s) Cadastrada(s)</b></label>
 		</div>
-		<div class="col-md-3 ml-1 mt-3 row border border-secondary rounded-lg">
-			<ol>
+
+		<div class="row">
+			<span class="ml-3"><p>Atendido (<i class="fa fa-check"></i>) / Não Atendido (<i class="fa fa-times"></i>)</p></span>
+		</div>
+
+		<div class="col-md-4 ml-1 mt-2 row border border-secondary rounded-lg">
+			<table class="table table-sm borderless">
+				<th>Especialidade</th>
+				<th>Atendido</th>
 				{loop="$consultas"}
-				<li class="mt-2">{function="pegarEspecialidade($value.consulta)"} <span class="ml-3">{if="$value.atendido == 1"}<i class="fa fa-check"></i>{else}<i class="fa fa-times"></i>{/if}</span></li>
+				<tr>
+					<td>{function="pegarEspecialidade($value.consulta)"}</td>
+					<td><span class="ml-4">{if="$value.atendido == 1"}<i class="fa fa-check"></i>{else}<i class="fa fa-times"></i>{/if}</span>
+					</td>
+				</tr>
 				{/loop}
-			</ol>
+			</table>
 		</div>
 	</div>
 </div>
