--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -1,3 +1,22 @@
+<body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-danger fixed-top">
+		<div class="container">
+			<a class="navbar-brand" href="/cadastro">
+    			<img src="/res/img/abrace.png" width="40" height="40" class="d-inline-block align-top" alt="Abrace Logo">
+  			</a>
+	    	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+	    		<span class="navbar-toggler-icon"></span>
+	  		</button>
+	  		<div class="collapse navbar-collapse" id="navbarToggle">
+	    		<div class="navbar-nav">
+	      			<a class="nav-item nav-link active" href="/cadastro">Cadastro</a>
+	      			<a class="nav-item nav-link" href="/pesquisa">Pesquisa</a>
+	      			<a class="nav-item nav-link" href="/relatorio">Relatório</a>
+	    		</div>
+	  		</div>
+  		</div>
+	</nav>
+	<div class="espaco"></div>
 <div class="cadastro wrapper">
 	<div class="container">
 		<p><h3>Cadastro</h3></p>
@@ -70,8 +89,8 @@
 		    	</div>
 		  	</div>
 
-		  	<label>Especialidades</label>
-		  	<div class="border col-md-4 col-xs-12">
+		  	<label>Especialidades</label><span class="text-danger"> *</span>
+		  	<div class="border col-md-11">
 		  		<div class="row my-2">
 			    	<div class="custom-control custom-checkbox ml-4 mr-3">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="clinico" value="1">
@@ -79,20 +98,40 @@
 					</div>
 
 					<div class="custom-control custom-checkbox mr-3">
-						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="dentista" value="2">
-						<label class="custom-control-label" for="dentista">Dentista</label>
+						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="oftalmo" value="2">
+						<label class="custom-control-label" for="oftalmo">Oftalmologista</label>
 					</div>
 
-					<div class="custom-control custom-checkbox">
+					<div class="custom-control custom-checkbox mr-3">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="psicologo" value="3">
 						<label class="custom-control-label" for="psicologo">Psicólogo</label>
+					</div>
+
+					<div class="custom-control custom-checkbox mr-3">
+						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="nutricionista" value="4">
+						<label class="custom-control-label" for="nutricionista">Nutricionista</label>
+					</div>
+
+					<div class="custom-control custom-checkbox mr-3">
+						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="massoterapia" value="5">
+						<label class="custom-control-label" for="massoterapia">Massoterapia</label>
+					</div>
+
+					<div class="custom-control custom-checkbox mr-3">
+						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="acupuntura" value="6">
+						<label class="custom-control-label" for="acupuntura">Acupuntura</label>
+					</div>
+
+					<div class="custom-control custom-checkbox mr-3">
+						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="ginecologia" value="7">
+						<label class="custom-control-label" for="ginecologia">Ginecologista</label>
 					</div>
 				</div>
 			</div>
 
 			<div class="clearfix">
-				<button type="submit" class="btn btn-outline-danger mt-3 float-right">Cadastrar</button>
-				<button type="reset" class="btn btn-outline-danger mt-3 mr-2 float-right">Limpar</button>
+				<button type="submit" class="btn btn-outline-danger my-4 float-right">Cadastrar</button>
+				<button type="reset" class="btn btn-outline-danger my-4 mr-2 float-right">Limpar</button>
 			</div>
 		</form>
 	</div>
