--- a/res/css/estilo.css
+++ b/res/css/estilo.css
@@ -24,18 +24,21 @@ position: relative;
   width: 100%;
 }
 
+.espaco {
+  margin-bottom: 100px;
+}
 
 /* Mudar a cor dos inputs quando selecionados Bootstrap */
 .form-control:focus {
+  color: #dc3545;
+  background-color: #fff;
   border-color: #dc3545;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(234, 123, 134, 0.6);
-}
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.15);
 
-.espaco {
-	margin-bottom: 100px;
-}
 
 /* Mudar a cor dos checkbox Bootstrap */
+
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
   border-color: #dc3545;
