Adição de novos campos nos formulários

--- a/views/detalhes.html
+++ b/views/detalhes.html
@@ -13,6 +13,9 @@
 	      			<a class="nav-item nav-link active" href="/pesquisa">Pesquisa</a>
 	      			<a class="nav-item nav-link" href="/relatorio">Relatório</a>
 	    		</div>
+	    		<div class="ml-4">
+	    			<a href="/logout" class="btn btn-sm btn-outline-danger">Sair</a>
+	    		</div>
 	  		</div>
   		</div>
 	</nav>
@@ -20,7 +23,7 @@
 <div class="wrapper">
 	<div class="container">
 
-		<div class="row mb-5 mx-auto">
+		<div class="row mb-4 mx-auto">
 			<h2>Dados Cadastrados</h2>
 		</div>
 
@@ -71,14 +74,83 @@
 		</div>
 
 		<div class="row">
-			<label class="col-md-3"><b>Consulta(s) Cadastrada(s)</b></label>
+			<label class="col-md-1"><b>Idade</b></label>
+			{if="$paciente.idade == null"}
+			<p class="col-md-2">Não informado</p>
+			{else}
+			<p class="col-md-2">{$paciente.idade} anos</p>
+			{/if}
+
+			<label class="col-md-1"><b>Altura</b></label>
+			{if="$paciente.altura == null"}
+			<p class="col-md-2">Não informado</p>
+			{else}
+			<p class="col-md-2">{function="casaDecimal($paciente.altura)"}m</p>
+			{/if}
+
+			<label class="col-md-1"><b>Peso</b></label>
+			{if="$paciente.peso == null"}
+			<p class="col-md-2">Não informado</p>
+			{else}
+			<p class="col-md-2">{function="casaDecimal($paciente.peso)"} Kg</p>
+			{/if}
+
+			<label class="col-md-1"><b>Temp.</b></label>
+			{if="$paciente.temperatura == null"}
+			<p class="col-md-2">Não informado</p>
+			{else}
+			<p class="col-md-2">{function="casaDecimal($paciente.temperatura)"}°</p>
+			{/if}
 		</div>
 
 		<div class="row">
-			<span class="ml-3"><p>Atendido (<i class="fa fa-check"></i>) / Não Atendido (<i class="fa fa-times"></i>)</p></span>
+			<label class="col-md-1"><b>P.A.</b></label>
+			{if="$paciente.pa == null"}
+			<p class="col-md-2">Não informado</p>
+			{else}
+			<p class="col-md-2">{$paciente.pa}</p>
+			{/if}
+
+			<label class="col-md-1"><b>Glicemia</b></label>
+			{if="$paciente.glicemia == null"}
+			<p class="col-md-2">Não informado</p>
+			{else}
+			<p class="col-md-2">{$paciente.glicemia} mg/dl</p>
+			{/if}
+
+			<label class="col-md-1"><b>Respiração</b></label>
+			{if="$paciente.respiracao == null"}
+			<p class="col-md-2">Não informado</p>
+			{else}
+			<p class="col-md-2">{$paciente.respiracao} rpm</p>
+			{/if}
+
+			<label class="col-md-1"><b>Pulso</b></label>
+			{if="$paciente.pulso == null"}
+			<p class="col-md-2">Não informado</p>
+			{else}
+			<p class="col-md-2">{$paciente.pulso} bpm</p>
+			{/if}
 		</div>
 
-		<div class="col-md-4 ml-1 mt-2 row border border-secondary rounded-lg">
+		<div class="row">
+			<label class="col-md-1"><b>Obs</b></label>
+			{if="$paciente.obs == null"}
+			<p class="col-md-2">Não informado</p>
+			{else}
+			<p class="col-md-11">{function="corrigirNome($paciente.obs)"}</p>
+			{/if}
+		</div>
+
+		<div class="row mt-3">
+			<label class="col-md-6"><h3>Consulta(s) Cadastrada(s)</h3></label>
+		</div>
+
+		<div class="row">
+			<span class="ml-3"><p>Atendido <i class="fa fa-check"></i> / Não Atendido <i class="fa fa-times"></i></p></span>
+		</div>
+
+		<div class="col-md-4 ml-1 mt-2 mb-5 row border border-secondary rounded-lg">
 			<table class="table table-sm borderless">
 				<th>Especialidade</th>
 				<th>Atendido</th>
