--- a/res/css/estilo.css
+++ b/res/css/estilo.css
@@ -6,7 +6,7 @@ height: 100%;
 }
 
 a {
-	color: #fff
+	color: #fff;
 }
 
 .relatorio label p {
@@ -30,11 +30,12 @@ position: relative;
 
 /* Mudar a cor dos inputs quando selecionados Bootstrap */
 .form-control:focus {
-  color: #dc3545;
+  color: #495057;
   background-color: #fff;
   border-color: #dc3545;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.15);
+}
 
 
 /* Mudar a cor dos checkbox Bootstrap */
