Ajustes + Pesquisa de cep através de webservices

--- a/views/pesquisa.html
+++ b/views/pesquisa.html
@@ -14,7 +14,7 @@
 	      			<a class="nav-item nav-link" href="/relatorio">Relatório</a>
 	    		</div>
 	    		<form class="ml-4" action="/pesquisa">
-					<div class="input-group input-group-sm d-flex align-items-center" style="width: 300px;">
+					<div class="input-group input-group-sm d-flex align-items-center" style="width: 250px;">
 	            	<input type="text" name="search" class="form-control" placeholder="Pesquisa" value="">
 	            		<div class="input-group-btn">
 	                		<button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
@@ -31,7 +31,7 @@
 <div class="row wrapper">
 	<div class="container">
 
-        <h3 class="my-5 text-center">Lista de Pessoas Cadastradas</h3>
+        <h3 class="mt-1 mb-5 text-center">Lista de Pacientes Cadastrados</h3>
 
         {if="$success != ''"}
     	<div class="alert alert-success alert-dismissible fade show" role="alert">
