--- a/views/medico.html
+++ b/views/medico.html
@@ -30,7 +30,7 @@
 
 				{if="$success != ''"}
     			<div class="alert alert-success alert-dismissible fade show" role="alert">
-  					<p>{$success}</p>
+  					{$success}
   					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
     				<span aria-hidden="true">&times;</span>
   					</button>
