--- a/views/pesquisa.html
+++ b/views/pesquisa.html
@@ -74,7 +74,7 @@
         	<nav class="mx-auto">
               <ul class="pagination pagination-sm justify-content-center">
                 {loop="$pages"}
-                <li class="page-item"><a class="page-link" href="{$value.href}">{$value.text}</a></li>
+                <li class="page-item"><a class="page-link mr-2" href="{$value.href}">{$value.text}</a></li>
                 {/loop}
               </ul>
             </nav>
