--- a/views/relatorio.html
+++ b/views/relatorio.html
@@ -42,10 +42,10 @@
 
 			<div class="row">
 				<label class="col-md-3"><b>Membros da Igreja:</b></label>
-				<p class="col-md-2">{$membros.total_membros}</p>
+				<p class="col-md-2">{$relatorio.total_membros}</p>
 
 				<label class="col-md-3"><b>Não Membros:</b></label>
-				<p class="col-md-2">{$membros.total_nao_membros}</p>
+				<p class="col-md-2">{$relatorio.total_nao_membros}</p>
 			</div>
 		</div>
 
