--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -73,7 +73,7 @@
 		    	<div class="form-group col-md-4">
 		      		<label for="inputZip">Cep</label><span class="text-danger"> **</span>
 		      		<div class="input-group">
-		      			<input type="text" class="form-control mr-2" name="cep" id="inputZip" pattern="[0-9]{5}-[0-9]{3}" title="Padrão: 00000-000" placeholder="01234-000">
+		      			<input type="text" class="form-control mr-2" name="cep" id="inputZip" pattern="[0-9]{5}-[0-9]{3}" title="Padrão: 00000-000" placeholder="00000-000">
 		      			<span class="input-group-btn">
 		      				<button type="button" class="btn btn-outline-danger" id="buttonZip">Pesquisar</button>
 		      			</span>
@@ -90,12 +90,12 @@
 		    	</div>
 		    	<div class="form-group col-md-3">
 		      		<label for="inputTel">Telefone</label>
-		      		<input type="text" class="form-control" id="inputTel" name="tel" pattern="[0-9]{4}-[0-9]{4}" title="Padrão: 0000-0000" placeholder="1234-5678">
+		      		<input type="text" class="form-control" id="inputTel" name="tel" pattern="[0-9]{4}-[0-9]{4}" title="Padrão: 0000-0000" placeholder="0000-0000">
 		    	</div>
 
 		    	<div class="form-group col-md-3">
 		      		<label for="inputCel">Celular</label>
-		      		<input type="text" class="form-control" id="inputCel" name="cel" pattern="[0-9]{5}-[0-9]{4}" title="Padrão: 00000-0000" placeholder="91234-5678">
+		      		<input type="text" class="form-control" id="inputCel" name="cel" pattern="[0-9]{5}-[0-9]{4}" title="Padrão: 00000-0000" placeholder="00000-0000">
 		    	</div>
 		  	</div>
 
@@ -104,8 +104,10 @@
 					<input type="checkbox" class="custom-control-input" name="permissao" id="permissao" value="1">
 					<label class="custom-control-label" for="permissao">Aceita receber informações sobre os próximos eventos realizados na Igreja Presbiteriana de Vila Gustavo</label>
 				</div>
+			</div>
 
-				<div class="custom-control custom-checkbox ml-4">
+			<div class="form-row ml-1 my-2">
+				<div class="custom-control custom-checkbox">
 					<input type="checkbox" class="custom-control-input" name="membro" id="membro" value="1">
 					<label class="custom-control-label" for="membro">Membro da Igreja</label>
 				</div>
@@ -114,46 +116,46 @@
 		  	<label class="my-3"><b>Encaminhamento</b></label><span class="text-danger"> *</span>
 		  	<div class="border col-sm-5">
 		  		<div class="row my-2">
-			    	<div class="custom-control custom-checkbox ml-4 mr-4">
+			    	<div class="custom-control custom-checkbox ml-4">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="clinico" value="1">
 						<label class="custom-control-label" for="clinico">Clínico Geral</label>
 					</div>
 
-					<div class="custom-control custom-checkbox mr-4">
+					<div class="custom-control custom-checkbox ml-4">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="oftalmo" value="2">
 						<label class="custom-control-label" for="oftalmo">Oftalmologista</label>
 					</div>
 
-					<div class="custom-control custom-checkbox">
+					<div class="custom-control custom-checkbox ml-4">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="nutricionista" value="3">
 						<label class="custom-control-label" for="nutricionista">Nutricionista</label>
 					</div>
 				</div>
 
 				<div class="row my-2">
-					<div class="custom-control custom-checkbox ml-4 mr-4">
+					<div class="custom-control custom-checkbox ml-4">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="massoterapia" value="4">
 						<label class="custom-control-label" for="massoterapia">Massoterapia</label>
 					</div>
 
-					<div class="custom-control custom-checkbox mr-4">
+					<div class="custom-control custom-checkbox ml-4">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="acupuntura" value="5">
 						<label class="custom-control-label" for="acupuntura">Acupuntura</label>
 					</div>
 
-					<div class="custom-control custom-checkbox">
+					<div class="custom-control custom-checkbox ml-4">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="ginecologista" value="6">
 						<label class="custom-control-label" for="ginecologista">Ginecologista</label>
 					</div>
 				</div>
 
-				<div class="row my-2 justify-content-center">
-					<div class="custom-control custom-checkbox mr-4">
+				<div class="row my-2 justify-content-center-md">
+					<div class="custom-control custom-checkbox ml-4">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="paglicemia" value="7">
 						<label class="custom-control-label" for="paglicemia">P.A. & Glicemia</label>
 					</div>
 
-					<div class="custom-control custom-checkbox">
+					<div class="custom-control custom-checkbox ml-4">
 						<input type="checkbox" class="custom-control-input" name="opcoes[]" id="triagem" value="8">
 						<label class="custom-control-label" for="triagem">Triagem</label>
 					</div>
